--- a/introduction.tex
+++ b/introduction.tex
@@ -45,9 +45,9 @@ The contributions of this thesis aim at covering both methodological and practic
 
 \noindent We evaluate the practicability of all our techniques through extensive experimental studies on both industry-strength benchmark and real-world applications. We also present three case studies that explore the end-to-end utility of the presented ideas. 
 
-All our techniques have been implemented as libraries for mainstream systems, including the \gcc\ compiler, the Jikes RVM, and the LLVM compiler infrastructure, and their source code is publicly available. To back our results and to empower other researchers to build upon the contributions of our papers, we submitted two software artifacts that have been reviewed and endorsed by the scientific community.
+All our techniques have been implemented as libraries for mainstream systems, including the \gcc\ compiler, the Jikes RVM, and the LLVM compiler infrastructure, and their source code is publicly available. To back our results and to empower other researchers to build upon the contributions of our work, we submitted two software artifacts that have been reviewed and endorsed by the scientific community.
 
-We believe that some techniques presented in this paper might have some technology transfer potential in VM construction; private conversations we had with developers from major ICT players about our OSR library for LLVM have been quite encouraging in this sense.
+We believe that some techniques presented in this thesis might have some technology transfer potential in VM construction; private conversations we had with developers from major ICT players about our OSR library for LLVM have been quite encouraging in this sense.
 
 \section{Structure of the Thesis}
 
