--- a/case-study-debugging.tex
+++ b/case-study-debugging.tex
@@ -27,7 +27,7 @@ Debugging metadata are transparent to optimization passes, do not prevent optimi
  \item \mytt{llvm.dbg.value} informs that a source variable is being set to the value held by the virtual register.
 \end{itemize}
 
-\noindent We extended \tinyvm\ to reconstruct this mapping and also to indentify which program locations in the unoptimized IR version $f_{base}$ correspond to source-level locations for a function, which can become user breakpoints. An OSR mapping is then generated when OSR-aware transformation passes are applied to $f_{base}$ to generate the optimized version $f_{opt}$. For each location in $f_{opt}$ that might correspond to (i.e., have as OSR landing pad) a source-level location in $f_{base}$, we determine which variables live at destination are live also at source (and thus they yield the same value), and which instead need to be reconstructed. We rely on the SSA form to identify which assignment(s) should be made in \reconstruct, as distinct assignments to source-level variables are represented by distinct IR objects. $\phi$-nodes at control-flow merge points can not be reconstructed, but our preliminary experimental results suggest that this might not be a frequent issue in practice.
+\noindent We extended \tinyvm\ to reconstruct this mapping and also to indentify which program locations in the unoptimized IR version $f_{base}$ correspond to source-level locations for a function, which can become user breakpoints. An OSR mapping is then generated when OSR-aware transformation passes are applied to $f_{base}$ to generate the optimized version $f_{opt}$. For each location in $f_{opt}$ that might correspond to (i.e., have as OSR landing pad) a source-level location in $f_{base}$, we determine which variables live at destination are live also at source (and thus they yield the same value), and which instead need to be reconstructed. We rely on the SSA form to identify which assignment(s) should be recovered by \reconstruct, as every value instance for a source-level variable is represented by a specific virtual register. $\phi$-nodes at control-flow merge points can not be reconstructed, but our preliminary experimental results suggest that this might not be a frequent issue in practice.
 
 %As pointed out in~\cite{Adl-Tabatabai96}, compiler transformations cause {\em endangered} variables by either eliminating or moving assignments to source variables. 
 
