--- a/thesis.tex
+++ b/thesis.tex
@@ -22,7 +22,7 @@
 \title{\input{title}}
 \author{Daniele Cono D'Elia}
 \IDnumber{1208297}
-\course[Computer Engineering]{Ingegneria Informatica}
+\course[Engineering in Computer Science]{Ingegneria Informatica}
 \courseorganizer{School of Information Engineering, Computer Science and Statistics}
 \cycle{XXVIII}
 \submitdate{March 2016}
